First dashboard working version

--- a/ALS.Glance.Web/Resources/Resources.pt-PT.resx
+++ b/ALS.Glance.Web/Resources/Resources.pt-PT.resx
@@ -316,4 +316,7 @@
   <data name="PatientEnvelopeWindowSize" xml:space="preserve">
     <value>Tamanho da janela da envolvente:</value>
   </data>
+  <data name="PatientTimeOfDayKey" xml:space="preserve">
+    <value>PeriodPt</value>
+  </data>
 </root>
