GetYearBounds implementation, bug fixes

--- a/ALS.Glance.Web/Resources/Resources.pt-PT.resx
+++ b/ALS.Glance.Web/Resources/Resources.pt-PT.resx
@@ -319,4 +319,7 @@
   <data name="PatientTimeOfDayKey" xml:space="preserve">
     <value>PeriodPt</value>
   </data>
+  <data name="MonthNameKey" xml:space="preserve">
+    <value>MonthnamePt</value>
+  </data>
 </root>
